More tests for MultiRoute